@@ -37,7 +37,6 @@ isNotLeaf <- function(node) {
 }
 
 
-
 changeName <- function(node, oldName, newName) {
   if(!isRoot(node)) {
     rm(list = oldName, envir = node$parent)
@@ -47,12 +46,11 @@ changeName <- function(node, oldName, newName) {
   return (newName)
 }
 
-
 #' @export
 .separator <- function(self) {
   if (isRoot(self)) return("")
-  if (self$position == self$parent$count) mySeparator <- paste0(" ", "\u00B0", "--")
-  else mySeparator <- paste0(" ", "\u00A6", "--")
+  if (self$position == self$parent$count) mySeparator <- paste0(" ", self$root$printFormatters$l, self$root$printFormatters$h)
+  else mySeparator <- paste0(" ", self$root$printFormatters$v, self$root$printFormatters$h)
   return (paste0(.parentSeparator(self$parent), mySeparator))
 }
 
@@ -60,9 +58,9 @@ changeName <- function(node, oldName, newName) {
 .parentSeparator <- function(self) {
   if (isRoot(self)) return("")
   if (self$position == self$parent$count) mySeparator <- "    "
-  else mySeparator <- paste0(" ", "\u00A6", "  ")
+  else mySeparator <- paste0(" ", self$root$printFormatters$v, "  ")
   paste0(.parentSeparator(self$parent), mySeparator)
-
+  
 }
 
 #' Calculate the average number of branches each non-leaf has
