@@ -47,6 +47,9 @@ the children lists are named, or if an automatic name (running number) should be
 \item{nodeName}{A name suggestion for x, if the name cannot be deferred otherwise. This is for example the case for
 the root with mode explicit and named lists.}
 
+\item{interpretNullAsList}{If \code{TRUE}, then \code{NULL}-valued lists are interpreted as child nodes. Else, they are interpreted as attributes.
+This has only an effect if \code{mode} is "simple".}
+
 \item{check}{Either
 \itemize{
  \item{\code{"check"}: if the name conformance should be checked and warnings should be printed in case of non-conformance (the default)}
