@@ -44,7 +44,17 @@ Similar options exist for list of lists.
 For more specialized conversions, see \code{\link{as.dendrogram.Node}}, \code{\link{as.Node.dendrogram}}, 
 \code{\link{as.phylo.Node}} and \code{\link{as.Node.phylo}}
 
-Finally, easy conversion options from and to JSON, YAML, igraph, and more exist.
+Finally, easy conversion options from and to list, dataframe, JSON, YAML, igraph, ape, rpart, party and more exist:
+
+\itemize{
+ \item{list: both directions}
+ \item{dataframe: both directions}
+ \item{JSON, YAML: both directions, via lists}
+ \item{igraph: from igraph to data.tree}
+ \item{ape: both directions}
+ \item{rpart: from rpart to data.tree}
+ \item{party: from party to data.tree}
+}
 }
 
 \section{Node and Reference Semantics}{
